2012-11-01  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * All type accesses in accessor methods should be qualified
      Trac ticket: http://svn.cs.lth.se/trac/jastadd-trac/ticket/85

2012-09-20 (JO)
    * Modified beaver.Symbol: made the value field non-final and added custom
      clone method. This fixes a "memory leak" when cloning AST nodes.

2012-09-13 (JO)
    * The addSourceFile method now returns the CompilationUnit representing
      the added source file name

2012-09-12 (ES/JO)
    * Applied patch from Emma which fixed a circular type lookup problem
      for generic types. The patch added the new inExtendsOrImplements
      attribute.

2012-07-18 (JO)
    * JastAddJ now uses the relative path to identify compilation units.
      The pathName attribute of compilation units may now be different due to
      this change.
      Using the relative path rather than the absolute path makes it simpler
      for static analysis tools to support relocation between different
      machines.

2012-06-29 (JO)
    * Made field and variable initializer type errors more verbose
    * Fixed error in type lookup that could cause duplicate compilation units
      to be added in the AST (one as a from-source CU, the other as library CU)
      See also http://svn.cs.lth.se/trac/jastadd-trac/ticket/74

2012-05-07 (JO)
    Changed the name of the Java7Backend compiler to JastAddJ (JJ7)

    Changed the name of the Java7Backend generated Jar file to JJ7.jar

2012-05-04 (JO)
    An implementation of createQualifiedAccess was added to AbstractWildcardType
    so that wildcard types do not use the default behaviour of creating a
    qualified type access with package and type name which are undefined for
    wildcard types.

    If a corresponding class file and source file have the same last modified
    timestamp, then the class file will be parsed rather than the source file.

    Final non-static fields now also receive the ConstantValue attribute when