@@ -3,6 +3,11 @@
     * All type accesses in accessor methods should be qualified
       Trac ticket: http://svn.cs.lth.se/trac/jastadd-trac/ticket/85
 
+2012-11-02  Jesper Öqvist
+
+    * Java7Backend compiler prints an error message and exits with nonzero
+      exit code in case an unexpected exception occurs
+
 2012-09-20 (JO)
     * Modified beaver.Symbol: made the value field non-final and added custom
       clone method. This fixes a "memory leak" when cloning AST nodes.
